src/main/webapp/css/catalogue.css
/* ... */
	
}

.loginheaders{
	float: right;
}
.loginheaders a{
	color: white;
	padding-right: 5px;
	padding-left: 10px;
	float: right;
}

/*------------------------------------------------------------ FOR THE BASKET PAGE	-----------------------------*/
#basket_contents_container {
	width: 700px;
	margin: 0 auto;
	padding-bottom: 50px;
}

#basket_contents_container_right_column {
	float: right;
}

#basket_header_title {
	margin: 0;
	padding: 0;
	display: inline-block;
}

#index_featured_products_product_image_basket_page {
	width: 100px;
	height: 150px;
}

#basket_items_container {
	width: auto;
}
/*#basket_items_container_left_column{		
		width:100px;
		display:inline-block;
	}
	#basket_items_container_right_column{		
		float:right;
		display:inline-block;
		right:0;
	}*/
#basket_item_container {
	
}

#basket_items_container_left_column {
	display: inline-block;
	width: 100px;
	vertical-align: top;
}

#basket_items_container_middle_column {
	display: inline-block;
	width: 300px;
	vertical-align: top;
	height: 154px;
	padding: 0;
	margin: 0
}

#basket_items_container_middle_column_item_title {
	padding: 0;
	margin: 0;
}

#basket_items_container_middle_column_item_description {
	height: 154px;
}

#basket_items_container_right_column {
	display: inline-block;
	width: auto;
	width: 140px;
	float: right;
	vertical-align: top;
	height: 154px;
	position: relative;
}

#basket_header_right_column {
	display: inline-block;
	float: right;
	margin-top: 25px;
	font-weight: bold;
}

#basket_header_right_column>p {
	display: inline-block;
}

.basket_page_price {
	padding-right: 32px;
}

.basket_page_price_priceInfo {
	font-weight: bold;
	left: 0;
	float: left;
	position: absolute;
}

#basket_page_totals_container {
	float: right;
	padding-bottom: 50px;
}

#basket_page_remove_item_button {
	bottom: 0;
	margin-top: 120px;
	position: absolute;
	margin-left: 80px;
	float: right;
	right: 0;
}

#basket_page_totals_container>img {
	float: right;
}

#basket_items_prodInfo {
	margin-right: 300px;
}

#basket_item_removed_popup_container {
	width: 200px;
	height: 100px;
}

#basket_item_removed_popup {
	width: 100%;
	height: 60px;
	background-color: #41A042;
	position: fixed;
	right: 0;
	bottom: 0px;
	right: 0;
	text-align: center;
	color: white;
	display: none;
}

#basket_item_removed_popup>p {
	font-size: 20px;
	padding: 0;
}

#item_popup_close_button {
	padding-top: 10px;
	padding-right: 10px;
	padding-bottom: 5px;
	float: right;
}

#item_popup_close_button:hover {
	cursor: pointer;
}

/*------------------------------------------------------------ FOR THE ABOUT PAGE	-----------------------------*/

#about_master_content_container {
	width: 80%;	
	margin: 0 auto;
	height: auto;
}

	#about_master_content_container_header {
		width: 100%;
		height: 60px;
	}

	#about_master_content_container_left_col {
		float: left;
		width: 25%;
		height: 90%;
		background-color: #bcf9a6;
	}
	
	#about_master_content_container_right_col {
		float: right;
		width: 75%;
		height: 90%;
	}
	
		#about_master_content_container_right_col_inner {
		width: 100%;
		padding-left: 30px;
		}
		
/*------------------------------------------------------------ FOR THE CONTACT PAGE	-----------------------------*/

#contact_master_content_container {
	width: 80%;	
	margin: 0 auto;
	height: auto;
}

	#contact_master_content_container_header {
		width: 100%;
		height: 60px;
	}

	#contact_master_content_container_left_col {
		float: left;
		width: 25%;
		height: 90%;
		background-color: #bcf9a6;
	}
	
	#contact_master_content_container_right_col {
		float: right;
		width: 75%;
		height: 90%;
	}
	
		#contact_master_content_container_right_col_inner {
		width: 100%;
		padding-left: 30px;
		}
		
/*------------------------------------------------------------ FOR THE HELP PAGE	-----------------------------*/

#help_master_content_container {
	width: 80%;	
	margin: 0 auto;
	height: auto;
}

	#help_master_content_container_header {
		width: 100%;
		height: 60px;
	}

	#help_master_content_container_left_col {
		float: left;
		width: 25%;
		height: 90%;
		background-color: #bcf9a6;
	}
	
	#help_master_content_container_right_col {
		float: right;
		width: 75%;
		height: 90%;
	}
	
		#help_master_content_container_right_col_inner {
		width: 100%;
		padding-left: 30px;
		}



/*----------------------------------------------------------- DEPARTMENT CSS ---------------------------------------*/
#department_page_content_container{
	width:1300px;
	height:auto;
	margin:0 auto;	
}


#department_page_left_container{
	float:left;
	width:200px;
	height:700px;	
	padding-right:20px;
}
	#department_page_top_container{
		width:100%;
		min-height:70px;
		height:auto;
		background-color:#3B7F3F;
		display:none;
		padding:0;
		margin:0;
		margin-top:-20px;
	}
	#dept_title{
		color:black;
		font-size:24px;
	}


#department_page_right_container{
	margin:0 auto;
	width:900px;
	height:700px;
}
	#department_page_top_advert{
		width:100%;
		height:120px;
		background-color:blue;
		background-image:url('../../../nbgardens/img/DepartmentImages/dept_page_advert.jpg');

	}
		#departments_items_container{
			height:100%;			
		}
			#departments_items_container_inner{
				width:auto;
				margin:0 auto;
			}
			.departments_item{
				width:220px;
				height:280px;

				display:inline-block;
				position:relative;
				padding-bottom:20px;


			}
				.departments_item_lower_bar{
					width:100%;
					height:60px;
					background-color:#3B7F3F;
					color:white;
					font-size:20px;
					margin:0;
					padding:0;
					position:absolute;
					bottom:0;
					text-align:center;
				}
					.departments_item_lower_bar > p:hover{
						text-decoration:underline;
					}
	
	.side_menu{
		width:100%;
		height:100%;	
	}
		.side_menu > h2{
			color:white;
			padding-left:20px;	
			float:left;
		}
		.side_menu > p{
		    line-height: 50px;
		    padding: 0;
		    margin: 0;
		}	
			.side_menu > p:hover{
			   background-color:#EDEDED;
			   cursor:pointer;
			}	
/* ... */

